Enable Source and Javadoc build.
Improvements in core-module. Fix JavaDoc.